[package]
name = "vulkan_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {version = "0.29.15", features = ["rwh_05"]}
ash = "0.37.3"
#vk-sys = "0.6.0"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"